# quantization-eval

./: README.md  compare_models.py  dev.ipynb  main.py  prompts.txt  pyproject.toml  requirements.txt  util.py
model_outputs/4bit/f20f0b99-461f-4d5a-90ea-d9e6de193c96/: attention_scores.npy  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/bf16/242029ed-4253-46af-bf3c-c85ea6ab5a0f/: generated_text.txt  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/bf16/bd032ec4-df99-41b4-8ae9-d09b4e6996f6/: generated_text.txt  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/bf16/fe3079be-d661-4200-bdbf-02618ff9c244/: generated_text.txt  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/fe3079be-d661-4200-bdbf-02618ff9c244/logits/: step_0_top_10_logit_distribution.csv  step_2_top_10_logit_distribution.csv  step_3_top_10_logit_distribution.csv  step_5_top_10_logit_distribution.csv  step_7_top_10_logit_distribution.csv  step_8_top_10_logit_distribution.csv  step_9_top_10_logit_distribution.csv
model_outputs/test-run-bnb4bit/: attention_scores.npy  generated_text.txt  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/test-run-bnb4bit-double/: attention_scores.npy  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/test-run-bnb4bit-nf4/: attention_scores.npy  generated_text.txt  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/test-run-bnb8bit/: attention_scores.npy  top_tokens.csv  top_tokens_by_layer.csv
model_outputs/test-run-full/: top_tokens.csv  top_tokens_by_layer.csv
(+220 files in other folders)
