[project]
name = "quantization-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]
